--- a/index.html
+++ b/index.html
@@ -26,19 +26,8 @@
 
         <div class="site-main" id="sTop">
             <div class="site-header">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <ul class="social-icons">
-                                <li><a href="#" class="fa fa-facebook"></a></li>
-                                <li><a href="#" class="fa fa-twitter"></a></li>
-                                <li><a href="#" class="fa fa-dribbble"></a></li>
-                                <li><a href="#" class="fa fa-linkedin"></a></li>
-                            </ul>
-                        </div> <!-- /.col-md-12 -->
-                    </div> <!-- /.row -->
-                </div> <!-- /.container -->
-                <div class="main-header">
+               
+                <div class="main-header scrolled">
                     <div class="container">
                         <div id="menu-wrapper">
                             <div class="row">
@@ -54,7 +43,7 @@
                                         <li><a href="#gettingstarted">Getting Started</a></li>
                                         <li><a href="#portfolio">Documentation</a></li>
                                         <li><a href="#our-team">Contributors</a></li>
-                                        <li><a href="#contact">Bugs and Feature Requests</a></li>                                 
+                                        <li><a href="#contact">Requests</a></li>                                 
                                     </ul>                                    
                                 </div> <!-- /.main-menu -->
                             </div> <!-- /.row -->
@@ -101,7 +90,23 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        TransomJS is a ....
+                        TransomJS is a rapid API development framework. Transom applications use metadata to 
+                        configure pre-built and tested modules that allow developers to quickly piece together services 
+                        that 'just work'. All transom applications are deployable and scalable on all the major hosting
+                        platforms.
+                        Using all standard Node libraries like Restify and Passport, you get all the benefits with minimal effort.
+                        TransomJS is based on plugins from the ground up. Everything is a plugin and can be modified or replaced. 
+                        It is understood that every application has some special sauce that does not come from the framework!  
+<hr>
+                        Why should you use TransomJS:
+                        <ul class="list-group">
+                            <li class="list-group-item">Spend your time on your special sauce</li>
+                            <li class="list-group-item">Don't re-invent the wheel</li>
+                            <li class="list-group-item">Fewer bugs in less code, all the transomJS code is pre-tested!</li>
+                            <li class="list-group-item">Designed to be scalable</li>
+                            <li class="list-group-item">Security is a solved problem</li>
+                            <li class="list-group-item">...</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -112,7 +117,8 @@
                 <div class="row">
                     <div class="heading-section col-md-12 text-center">
                         <h2>Getting Started</h2>
-                        <p>We design mobile-first websites for you</p>
+                        <p>This section is still a work in progress. In the mean time use the links in
+                             the documentation section to get going.</p>
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
                 <div class="row">
@@ -123,7 +129,7 @@
                             </div> <!-- /.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
-                                   <h3>HTML5 Coding</h3>
+                                   <h3>Seed application from Github</h3>
                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p> 
                                 </div>
                             </div> <!-- /.service-content -->
@@ -136,7 +142,7 @@
                             </div> <!-- /.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
-                                   <h3>Our Support</h3>
+                                   <h3>Online Sample App</h3>
                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p> 
                                 </div>
                             </div> <!-- /.service-content -->
@@ -149,8 +155,8 @@
                             </div> <!-- /.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
-                                   <h3>Our Design</h3>
-                                   <p>We make HTML CSS templates that are responsive for any screen size on any device. Feel free to download and use our templates without restrictions.</p> 
+                                   <h3>Get the client sdk of your choice</h3>
+                                   <p>We have an Angular 4 and up client, as well as a straight up javascript client. Feel free to contribute any other client!</p> 
                                 </div>
                             </div> <!-- /.service-content -->
                         </div> <!-- /#service-1 -->
@@ -162,7 +168,7 @@
                             </div> <!-- /.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
-                                   <h3>Go for mobile</h3>
+                                   <h3>Review the documentation</h3>
                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p> 
                                 </div>
                             </div> <!-- /.service-content -->
