start work on the documentation section.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <ul class="menu-first">
                                         <li class="active"><a href="#">Home</a></li>
                                         <li><a href="#gettingstarted">Getting Started</a></li>
-                                        <li><a href="#portfolio">Documentation</a></li>
+                                        <li><a href="#documentation">Documentation</a></li>
                                         <li><a href="#our-team">Contributors</a></li>
                                         <li><a href="#contact">Requests</a></li>                                 
                                     </ul>                                    
@@ -68,7 +68,7 @@
                                 <div class="slider-caption visible-md visible-lg">
                                     <h2>Responsive HTML CSS</h2>
                                     <p>Download and use it for your site</p>
-                                    <a href="#" class="slider-btn">Go to Portfolio</a>
+                                    <a href="#" class="slider-btn">Go to Documentation</a>
                                 </div>
                             </li>
                             <li>
@@ -180,114 +180,121 @@
 
 
 
-        <div class="content-section" id="portfolio">
+        <div class="content-section" id="documentation">
             <div class="container">
                 <div class="row">
                     <div class="heading-section col-md-12 text-center">
-                        <h2>Our Portfolio</h2>
-                        <p>Amazing work for our clients</p>
+                        <h2>TransomJS Documentation</h2>
+                        <p>Awesome plugins ready to be integrated into your app.</p>
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
                 <div class="row">
-                    <div class="portfolio-item col-md-3 col-sm-6">
-                        <div class="portfolio-thumb">
+                    <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-title">Transom Core</div>
+                        <div class="documentation-thumb">
                             <img src="images/gallery/p1.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h3>New Walk</h3>
-                                <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
-                                <a href="images/gallery/p1.jpg" data-rel="lightbox" class="expand">
-                                    <i class="fa fa-search"></i>
+                            <div class="documentation-overlay">
+                                <p>The transom core is the heart of the application. All other plugins are 
+                                    registered with the core. 
+                                </p>
+                                <a href="https://github.com/transomjs/transom-core/blob/master/README.md" target="_blank" class="expand">
+                                    Details <i class="fa fa-search"></i>
                                 </a>
-                            </div> <!-- /.portfolio-overlay -->
-                        </div> <!-- /.portfolio-thumb -->
-                    </div> <!-- /.portfolio-item -->
-                    <div class="portfolio-item col-md-3 col-sm-6">
-                        <div class="portfolio-thumb">
+                            </div> <!-- /.documentation-overlay -->
+                        </div> <!-- /.documentation-thumb -->
+                    </div> <!-- /.documentation-item -->
+                    <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-title">Transom Mongoose</div>
+                        <div class="documentation-thumb">
                             <img src="images/gallery/p2.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h3>Boat</h3>
-                                <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
-                                <a href="images/gallery/p2.jpg" data-rel="lightbox" class="expand">
-                                    <i class="fa fa-search"></i>
+                            <div class="documentation-overlay">
+                                <p>The Transom mongoose plugin provides ready to use CRUD endpoints for all 
+                                    your data interactions backed by a Mongo database. Sophisticated querying,
+                                    paging and sorting is all included.
+                                </p>
+                                <a href="https://github.com/transomjs/transom-mongoose/blob/master/README.md" target="_blank" class="expand">
+                                    Details <i class="fa fa-search"></i>
                                 </a>
-                            </div> <!-- /.portfolio-overlay -->
-                        </div> <!-- /.portfolio-thumb -->
-                    </div> <!-- /.portfolio-item -->
-                    <div class="portfolio-item col-md-3 col-sm-6">
-                        <div class="portfolio-thumb">
+                            </div> <!-- /.documentation-overlay -->
+                        </div> <!-- /.documentation-thumb -->
+                    </div> <!-- /.documentation-item -->
+                    <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-title">Security</div>
+                        <div class="documentation-thumb">
                             <img src="images/gallery/p7.jpg" alt="">
-                            <div class="portfolio-overlay">
-                                <h3>Urban</h3>
-                                <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
-                                <a href="images/gallery/p7.jpg" data-rel="lightbox" class="expand">
-                                    <i class="fa fa-search"></i>
+                            <div class="documentation-overlay">
+                                <p>Implement industry standard security. Choose which endpoints to secure. Apply
+                                    fine grained security to your data!
+                                </p>
+                                <a href="https://github.com/transomjs/transom-mongoose-localuser/blob/master/README.md" target="_blank" class="expand">
+                                    Details <i class="fa fa-search"></i>
                                 </a>
-                            </div> <!-- /.portfolio-overlay -->
-                        </div> <!-- /.portfolio-thumb -->
-                    </div> <!-- /.portfolio-item -->
-                    <div class="portfolio-item col-md-3 col-sm-6">
-                        <div class="portfolio-thumb">
+                            </div> <!-- /.documentation-overlay -->
+                        </div> <!-- /.documentation-thumb -->
+                    </div> <!-- /.documentation-item -->
+                    <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-thumb">
                             <img src="images/gallery/p8.jpg" alt="">
-                            <div class="portfolio-overlay">
+                            <div class="documentation-overlay">
                                 <h3>Cycling</h3>
                                 <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
                                 <a href="images/gallery/p8.jpg" data-rel="lightbox" class="expand">
                                     <i class="fa fa-search"></i>
                                 </a>
-                            </div> <!-- /.portfolio-overlay -->
-                        </div> <!-- /.portfolio-thumb -->
-                    </div> <!-- /.portfolio-item -->
-                    <div class="portfolio-item col-md-3 col-sm-6">
-                        <div class="portfolio-thumb">
+                            </div> <!-- /.documentation-overlay -->
+                        </div> <!-- /.documentation-thumb -->
+                    </div> <!-- /.documentation-item -->
+                    <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-thumb">
                             <img src="images/gallery/p3.jpg" alt="">
-                            <div class="portfolio-overlay">
+                            <div class="documentation-overlay">
                                 <h3>Digital Era</h3>
                                 <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
                                 <a href="images/gallery/p3.jpg" data-rel="lightbox" class="expand">
                                     <i class="fa fa-search"></i>
                                 </a>
-                            </div> <!-- /.portfolio-overlay -->
-                        </div> <!-- /.portfolio-thumb -->
-                    </div> <!-- /.portfolio-item -->
-                    <div class="portfolio-item col-md-3 col-sm-6">
-                        <div class="portfolio-thumb">
+                            </div> <!-- /.documentation-overlay -->
+                        </div> <!-- /.documentation-thumb -->
+                    </div> <!-- /.documentation-item -->
+                    <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-thumb">
                             <img src="images/gallery/p4.jpg" alt="">
-                            <div class="portfolio-overlay">
+                            <div class="documentation-overlay">
                                 <h3>Horizon</h3>
                                 <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
                                 <a href="images/gallery/p4.jpg" data-rel="lightbox" class="expand">
                                     <i class="fa fa-search"></i>
                                 </a>
-                            </div> <!-- /.portfolio-overlay -->
-                        </div> <!-- /.portfolio-thumb -->
-                    </div> <!-- /.portfolio-item -->
-                    <div class="portfolio-item col-md-3 col-sm-6">
-                        <div class="portfolio-thumb">
+                            </div> <!-- /.documentation-overlay -->
+                        </div> <!-- /.documentation-thumb -->
+                    </div> <!-- /.documentation-item -->
+                    <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-thumb">
                             <img src="images/gallery/p5.jpg" alt="">
-                            <div class="portfolio-overlay">
+                            <div class="documentation-overlay">
                                 <h3>Aquatic City</h3>
                                 <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
                                 <a href="images/gallery/p5.jpg" data-rel="lightbox" class="expand">
                                     <i class="fa fa-search"></i>
                                 </a>
-                            </div> <!-- /.portfolio-overlay -->
-                        </div> <!-- /.portfolio-thumb -->
-                    </div> <!-- /.portfolio-item -->
-                    <div class="portfolio-item col-md-3 col-sm-6">
-                        <div class="portfolio-thumb">
+                            </div> <!-- /.documentation-overlay -->
+                        </div> <!-- /.documentation-thumb -->
+                    </div> <!-- /.documentation-item -->
+                    <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-thumb">
                             <img src="images/gallery/p6.jpg" alt="">
-                            <div class="portfolio-overlay">
+                            <div class="documentation-overlay">
                                 <h3>New Path</h3>
                                 <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
                                 <a href="images/gallery/p6.jpg" data-rel="lightbox" class="expand">
                                     <i class="fa fa-search"></i>
                                 </a>
-                            </div> <!-- /.portfolio-overlay -->
-                        </div> <!-- /.portfolio-thumb -->
-                    </div> <!-- /.portfolio-item -->
+                            </div> <!-- /.documentation-overlay -->
+                        </div> <!-- /.documentation-thumb -->
+                    </div> <!-- /.documentation-item -->
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
-        </div> <!-- /#portfolio -->
+        </div> <!-- /#documentation -->
 
 
 
