more docs content

--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
-                        <div class="documentation-title">Transom Mongoose</div>
+                        <div class="documentation-title">MongoDB</div>
                         <div class="documentation-thumb">
                             <img src="images/gallery/p2.jpg" alt="">
                             <div class="documentation-overlay">
                                 <p>The Transom mongoose plugin provides ready to use CRUD endpoints for all 
                                     your data interactions backed by a Mongo database. Sophisticated querying,
-                                    paging and sorting is all included.
+                                    paging and sorting is all included, without writing any code.
                                 </p>
                                 <a href="https://github.com/transomjs/transom-mongoose/blob/master/README.md" target="_blank" class="expand">
                                     Details <i class="fa fa-search"></i>
@@ -233,49 +233,53 @@
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
+                            <div class="documentation-title">Email</div>
                         <div class="documentation-thumb">
                             <img src="images/gallery/p8.jpg" alt="">
                             <div class="documentation-overlay">
-                                <h3>Cycling</h3>
-                                <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
-                                <a href="images/gallery/p8.jpg" data-rel="lightbox" class="expand">
-                                    <i class="fa fa-search"></i>
+                                <p>Add email functionality to your application, just supply the configuration data.</p>
+                                <a href="https://github.com/transomjs/transom-smtp/blob/master/README.md" target="_blank" class="expand">
+                                    Details <i class="fa fa-search"></i>
                                 </a>
                             </div> <!-- /.documentation-overlay -->
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
+                            <div class="documentation-title">Custom Server Functions</div>
                         <div class="documentation-thumb">
                             <img src="images/gallery/p3.jpg" alt="">
                             <div class="documentation-overlay">
-                                <h3>Digital Era</h3>
-                                <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
-                                <a href="images/gallery/p3.jpg" data-rel="lightbox" class="expand">
+                                <p>Create your own end points and write your own code. Use all of the functionality
+                                    provided by all the Transom plugins. Your own end points are easily secured, can send
+                                    email, access the database and do anything a plugin can do.
+                                </p>
+                                <a href="https://github.com/transomjs/transom-server-functions/blob/master/README.md" target="_blank" class="expand">
                                     <i class="fa fa-search"></i>
                                 </a>
                             </div> <!-- /.documentation-overlay -->
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-title">Socket IO</div>
                         <div class="documentation-thumb">
                             <img src="images/gallery/p4.jpg" alt="">
                             <div class="documentation-overlay">
-                                <h3>Horizon</h3>
-                                <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
-                                <a href="images/gallery/p4.jpg" data-rel="lightbox" class="expand">
-                                    <i class="fa fa-search"></i>
+                                <p>Add secure Websockets for asynchronous communications. Have your server call you back when a process finishes.
+                                    Synchronize your data across multiple clients in real time! </p>
+                                <a href="https://github.com/transomjs/transom-socketio-internal/blob/master/README.md" target="_blank" class="expand">
+                                   Details <i class="fa fa-search"></i>
                                 </a>
                             </div> <!-- /.documentation-overlay -->
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
+                            <div class="documentation-title">Templated Content</div>
                         <div class="documentation-thumb">
                             <img src="images/gallery/p5.jpg" alt="">
                             <div class="documentation-overlay">
-                                <h3>Aquatic City</h3>
-                                <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
-                                <a href="images/gallery/p5.jpg" data-rel="lightbox" class="expand">
-                                    <i class="fa fa-search"></i>
+                                <p>Create and use templates for emails and even HTML content to create custom workflows for your application.</p>
+                                <a href="https://github.com/transomjs/transom-ejs-template/blob/master/README.md" target="_blank" class="expand">
+                                    Details <i class="fa fa-search"></i>
                                 </a>
                             </div> <!-- /.documentation-overlay -->
                         </div> <!-- /.documentation-thumb -->
