add static content.

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
-                            <div class="documentation-title">Templated Content</div>
+                        <div class="documentation-title">Templated Content</div>
                         <div class="documentation-thumb">
                             <img src="images/gallery/p5.jpg" alt="">
                             <div class="documentation-overlay">
@@ -285,12 +285,12 @@
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
+                        <div class="documentation-title">Static Content</div>
                         <div class="documentation-thumb">
                             <img src="images/gallery/p6.jpg" alt="">
                             <div class="documentation-overlay">
-                                <h3>New Path</h3>
-                                <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
-                                <a href="images/gallery/p6.jpg" data-rel="lightbox" class="expand">
+                                <p>Serve static content like application assets from your api server.</p>
+                                <a href="https://github.com/transomjs/transom-scaffold/blob/master/README.md" target="_blank" class="expand">
                                     <i class="fa fa-search"></i>
                                 </a>
                             </div> <!-- /.documentation-overlay -->
